@@ -23,7 +23,7 @@ class ImporterTest(EpubFunctionalTestCase):
         fid = self.portal.invokeFactory('EpubFile', id='tmp')
         tmp = getattr(self.portal, fid)
         view = tmp.restrictedTraverse('@@epub_import_view')
-        newId = view.importFile(fileContent) #pyflakes, #pylint: disable-msg = W0612
+        view.importFile(fileContent)
 
         self.rootEpubFolder = getattr(self.portal,
                         'climate-change-impact-in-europe', None)
