@@ -1,3 +1,5 @@
+""" EEA EPub Installer
+"""
 from setuptools import setup, find_packages
 import os
 from os.path import join
@@ -12,7 +14,8 @@ setup(name='eea.epub',
       description="Publish Plone content in epub form",
       long_description=open("README.txt").read() + "\n" +
                        open(os.path.join("docs", "HISTORY.txt")).read(),
-      # Get more strings from http://pypi.python.org/pypi?%3Aaction=list_classifiers
+      # Get more strings from
+      # http://pypi.python.org/pypi?%3Aaction=list_classifiers
       classifiers=[
         "Framework :: Plone",
         "Programming Language :: Python",
